ensure image does not stretch

--- a/components/marketing_signup_modal/index.styl
+++ b/components/marketing_signup_modal/index.styl
@@ -11,7 +11,7 @@ divider-height = 40px
   display flex
   align-items stretch
   &-left
-    background-size 100% 100%
+    background-size cover
     background-position center right
 
     @media screen and (max-width 900px)
